wal-macros/tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.stderr
error: The `<area>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<area/>`)
 --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:4:13
  |
4 |     rsx! { <area></area> };
  |             ^^^^^^

error: The `<base>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<base/>`)
 --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:5:13
  |
5 |     rsx! { <base></base> };
  |             ^^^^^^

error: The `<br>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<br/>`)
 --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:6:13
  |
6 |     rsx! { <br></br> };
  |             ^^^^

error: The `<col>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<col/>`)
 --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:7:13
  |
7 |     rsx! { <col></col> };
  |             ^^^^^

error: The `<embed>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<embed/>`)
 --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:8:13
  |
8 |     rsx! { <embed></embed> };
  |             ^^^^^^^

error: The `<hr>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<hr/>`)
 --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:9:13
  |
9 |     rsx! { <hr></hr> };
  |             ^^^^

error: The `<img>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<img/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:10:13
   |
10 |     rsx! { <img></img> };
   |             ^^^^^

error: The `<input>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<input/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:11:13
   |
11 |     rsx! { <input></input> };
   |             ^^^^^^^

error: The `<link>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<link/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:12:13
   |
12 |     rsx! { <link></link> };
   |             ^^^^^^

error: The `<meta>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<meta/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:13:13
   |
13 |     rsx! { <meta></meta> };
   |             ^^^^^^

error: The `<param>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<param/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:14:13
   |
14 |     rsx! { <param></param> };
   |             ^^^^^^^

error: The `<source>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<source/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:15:13
   |
15 |     rsx! { <source></source> };
   |             ^^^^^^^^

error: The `<track>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<track/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:16:13
   |
16 |     rsx! { <track></track> };
   |             ^^^^^^^

error: The `<wbr>` tag is a void element. Void elements should be self closing (they can not have children). (hint: try `<wbr/>`)
  --> tests/rsx_macro_tests/elements/element_with_wrong_way_of_closing_fail.rs:17:13
   |
17 |     rsx! { <wbr></wbr> };
   |             ^^^^^
